--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>n1sm~</title>
+<title>~~FIELDNESS~~</title>
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
