--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="wrapps">
       <div></div>
       <div>
-        <img class="img-fluid" src="field.png">
+        <img class="img-fluid" src="FIELD.png">
       </div>
     <div>
   </div>
@@ -72,7 +72,7 @@
 
     <div class="ness"> 
 
-     <img class="img-fluid" src="ness.png">
+     <img class="img-fluid" src="NESS.png">
     </div>
 
       <div>
