--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 </div>
 
 <div class="five">
-  <img class="disappear" src="squaregifs/1STUDIO.gif">     
-  <img class="disappear2" src="squaregifs/2BARKf.gif">
-  <img class="img-fluid" src="squaregifs/3ROLL.gif">
-  <img class="img-fluid" src="squaregifs/4ORANG.gif">
-  <img class="img-fluid" src="squaregifs/5SCROLL.gif">
+  <img class="disappear" src="1STUDIO.gif">     
+  <img class="disappear2" src="2BARKf.gif">
+  <img class="img-fluid" src="3ROLL.gif">
+  <img class="img-fluid" src="4ORANG.gif">
+  <img class="img-fluid" src="5SCROLL.gif">
 </div>
 
 
@@ -136,25 +136,25 @@
 
 <div class="five">
     <div class="elements">    
-    <img class="img-fluid" src="square216/001.jpg"> 
-     <img class="img-fluid" src="squaregifs/1STUDIO.gif">
+    <img class="img-fluid" src="001.jpg"> 
+     <img class="img-fluid" src="1STUDIO.gif">
         
     </div>
   <div class="elements">
-    <img class="img-fluid" src="square216/002.jpg">
-    <img class="img-fluid" src="squaregifs/2BARKf.gif">
+    <img class="img-fluid" src="002.jpg">
+    <img class="img-fluid" src="2BARKf.gif">
   </div>
   <div class="elements">
-    <img class="img-fluid" src="square216/003.jpg">
-    <img class="img-fluid" src="squaregifs/3ROLL.gif">
+    <img class="img-fluid" src="003.jpg">
+    <img class="img-fluid" src="3ROLL.gif">
   </div>
   <div class="elements">
-    <img class="img-fluid" src="square216/004.jpg">
-    <img class="img-fluid" src="squaregifs/4ORANG.gif">
+    <img class="img-fluid" src="004.jpg">
+    <img class="img-fluid" src="4ORANG.gif">
   </div>
   <div class="elements">
-    <img class="img-fluid" src="square216/005.jpg">
-    <img class="elements_img" src="squaregifs/5SCROLL.gif">
+    <img class="img-fluid" src="005.jpg">
+    <img class="elements_img" src="5SCROLL.gif">
   </div>
   
 </div>
