--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     ---> <a href="NOTE.html"> Nothing will be forgotten </a> <font size="3em"> (an account of the time this project was made in)</font><br><br>
      <!-- what are numbers even + a game <br><br> -->
     ---> <a href="source.html"> Re/source Re/ference </a>
-    <img class="img-fluid" src="003.png">
+    <img class="img-fluid" src="tree.png">
 
     </font>
   </div>
