--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
   <div class="row">
       <div class="col-md-3">
-        <div class="container"><img src="FMI.JPG" style="width:100%;max-width:120px"></div>
+        <div class="container"><img src="FMI.jpg" style="width:100%;max-width:120px"></div>
       </div>
       <div class="col-md-3">
         <div class="container">
