--- a/thepandemic.html
+++ b/thepandemic.html
@@ -32,7 +32,7 @@
 
 <div class="wrapps">
   <div>
-    <font face="Roboto Condensed" size="5" color="#ff00ff"> ABOUT TIME </font>
+    <font face="Roboto Condensed" size="5" color="#ff00ff"> AN ACCOUNT FROM ANOTHER TIME </font>
   </div>
 
   <div>
@@ -96,10 +96,10 @@ Network maps, habits, network time.
   <div class="bg">
     <div></div>
     <div class="bgtransform">
-      <img class="img-fluid" src="pogrom.jpg">
+      <img class="img-fluid" src="overgrown.jpg">
     </div>
     <div class="bgtrans2">
-      <img class="img-fluid" src="hurry.jpg">
+      <img class="img-fluid" src=".jpg">
     </div>
   </div>
 
