--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@
 <div class="feels">
  <div class="def2">
   <font face="Roboto Mono" size="4.5em"> 
+	  Fieldness is an ecological network and platform that uses KONJ cryptocurrency. It is an active space and an archive. It is subject to global events like the covid-19 pandemic, cosmic events like solar flares, human and non human events like the sowing seasons, locust attacks, floods, electricity shortages, internet shutdowns and mushroom foraging seasons etc. 
+	  
+	  Any human or bot who has laid eyes on this website has left an impression here in the form of a circle. You are also a blob here. <br>
+	  Now you are invited to become a part of this network by downloading the fieldness app on your phone. (It is an android app right now, we're trying to get an OS app soon as well). But with or whitout aspp, with or without phone, this is about a way of seeing the spaces we live in, to look towards ancient interlligence, alternate worlds with an alternative vocabulary. Fieldness is shifting your attention away. Away from the words on a screen. Look away. Blink a few times. <br><br>
+	  
+	  So take a walk in th wilderness or walk to the nearest circle that you can see on the map. If where you are, you are not in the majority and there are non human beings- like mushrooms, if you are standing in soil and not on concrete then you could mark this place as an 'incindnt'
+	 
+	  
+	  
+	  
+	  
         Fieldness is an artistic research project created to <i> observe </i> the amalgamated surfaces we live on with our extended 'fluidic' bodies in cybernetic loop with physical spaces and technological devices. 
         <br><br>
         Field-ness is imagined as a network of webpages and people connected across a mobile app in an attempt to create tremors in the neo-libral fabric.  <br> <a href="field.html">What is field?</a> <br><br>
