--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 	  
 	  
 	  
-	  
-        Fieldness is an artistic research project created to <i> observe </i> the amalgamated surfaces we live on with our extended 'fluidic' bodies in cybernetic loop with physical spaces and technological devices. 
+	<br><br>  
+        Fieldness is an artistic research project created to <i> observe </i> the amalgamated surfaces we live on.
         <br><br>
         Field-ness is imagined as a network of webpages and people connected across a mobile app in an attempt to create tremors in the neo-libral fabric.  <br> <a href="field.html">What is field?</a> <br><br>
         It is also an attempt to exist as a techno-human-algorithmic entity feedbacking with moist meme sources and non-human living beings,  to explore various human and non-human vicinities. 
