--- a/tiem.html
+++ b/tiem.html
@@ -41,21 +41,21 @@
 </div>
 
 <div class="wrap">
-
+	<div></div>
       <font face="Roboto Mono" size="4.5" color="#ffffff">
        <br>
         <br>
 
-        The passing of time is neither slow nor fast in this quaren-time. In the beginning I thought it was slower than usual, but I was mistaken. It is largely eventless which is why it feels warped. 
+        The passing of time is neither slow nor fast in this quaren-time. In the beginning I thought it was slower than 	usual, but I was mistaken. It is largely eventless which is why it feels warped. 
         <br><br>
-        There is no present moment. There is nothing here. I keep trying to be present in this very moment, even if for a microsecond, but I fail. The present has not existed for a long time now. 
+        There is no present moment. There is nothing here. I keep trying to be present in this very moment, even if for a 	microsecond, but I fail. The present has not existed for a long time now. 
         <br>
-            I keep looking around to see where the present moment is actually happening, who is able to live in it. And most people I know are in a state of waiting. Its like not being able to breathe in life fully. Freedoms are curbed. Perhaps  a way of having some memory of this time would be a challenge. Even though I am working, eating, sleeping and waking, even seeing the sun on many morning.s, I am not feeling anything anymore. I'm unable to occupy the present moment. <br>
+            I keep looking around to see where the present moment is actually happening, who is able to live in it. And 	most people I know are in a state of waiting. Its like not being able to breathe in life fully. Freedoms are 		curbed. Perhaps  a way of having some memory of this time would be a challenge. Even though I am working, eating, 	sleeping and waking, even seeing the sun on many morning.s, I am not feeling anything anymore. I'm unable to occupy 		the present moment. <br>
         __________________________________________________________________________<br>
         <br>
-        Time is folded within everything - Occurrence of thought, light coming to us from the sun, possibility of sound- the propagation of waves. All percieveable things implicitly carry time. To have a thought is to experience the passage of time. 
+        Time is folded within everything - Occurrence of thought, light coming to us from the sun, possibility of sound- 	the propagation of waves. All percieveable things implicitly carry time. To have a thought is to experience the 	passage of time. 
         <br>
-        In this text, there are thought experiments for you - the reader. And there are findings of my experiments with time and my mind. Before the lockdown I was always busy living-Observing other human and non human things and being entangled in other being's realities. I never had had such unbroken time of emptiness that facilitates self observation. I did not start out with the intention of observing myself. It just happened  - as you will see.  This text is also explores diverse and well documented ways of time is seen historically and scientificly. You can also, just for fun, explore the structure of language to see how it affects our perception of time - or our ontological view of it -as we go along. 
+        In this text, there are thought experiments for you - the reader. And there are findings of my experiments with 	time and my mind. Before the lockdown I was always busy living-Observing other human and non human things and 		being entangled in other being's realities. I never had had such unbroken time of emptiness that facilitates self 	observation. I did not start out with the intention of observing myself. It just happened  - as you will see.  This 	text is also explores diverse and well documented ways of time is seen historically and scientificly. You can also, 	just for fun, explore the structure of language to see how it affects our perception of time - or our ontological 	view of it -as we go along. 
         <br><br>
         ________________________________________________________________________________________
         <br>
