--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <font face="Roboto Mono" size="4em">
     ---> <a href="walks2.html"> Forest walks </a> <br><br>
     ---> <a href="thepandemic.html"> <i> An account from 2050 </i> </a><br><br>
-    ---> <a href="tiem.html"> TIEM </a><br><br>
+    ---> <a href="tiem3.html"> TIEM </a><br><br>
     <!--  <a href="portal.html">portal and the portal</a> <br><br> -->
     ---> <a href="process.html"> Process </a> <br><br>
     ---> <a href="NOTE.html"> Nothing will be forgotten </a> <font size="3em"> (an account of the time this project was made in)</font><br><br>
