--- a/tiem3.html
+++ b/tiem3.html
@@ -158,10 +158,10 @@
     <div class="bgtransform">
       <img class="img-fluid" src="tiem2.gif">
     </div>
-    <div class="bgtrans2">
-      <img class="img-fluid" src="hurry.jpg">
-    </div>
+   
   </div>
 
-
+<div class="bottom">
+  <img class="img-fluid" src="tiem.jpg">
+</div>
 </body>
