--- a/index.html
+++ b/index.html
@@ -102,12 +102,53 @@
 <div class="feels">
  <div class="def2">
   <font face="Roboto Mono" size="4.5em"> 
-	  Fieldness is an ecological network and platform that uses KONJ cryptocurrency. It is an active space and an archive. It is subject to global events like the covid-19 pandemic, cosmic events like solar flares, human and non human events like the sowing seasons, locust attacks, floods, electricity shortages, internet shutdowns and mushroom foraging seasons etc. 
+	  Fieldness is an ecological network and a crowd sopurced database hosted on Ethereum. Ethereum is a global, open-source platform for decentralized applications.  Fieldness is a artistic research project and a dapp. (dapp = decentralized application.)
 	  
-	  Any human or bot who has laid eyes on this website has left an impression here in the form of a circle. You are also a blob here. <br>
-	  Now you are invited to become a part of this network by downloading the fieldness app on your phone. (It is an android app right now, we're trying to get an OS app soon as well). But with or whitout aspp, with or without phone, this is about a way of seeing the spaces we live in, to look towards ancient interlligence, alternate worlds with an alternative vocabulary. Fieldness is shifting your attention away. Away from the words on a screen. Look away. Blink a few times. <br><br>
+	  The fieldness dapp    |    web 3.0 and dapp landscape     | 
 	  
-	  So take a walk in th wilderness or walk to the nearest circle that you can see on the map. If where you are, you are not in the majority and there are non human beings- like mushrooms, if you are standing in soil and not on concrete then you could mark this place as an 'incindnt'
+	  The idea of this project is to create a system of value that represents what actually is valuable. 
+	  
+	  
+	  
+	  
+	  
+	   Fieldness is shifting your attention away. Away from the words on a screen. Look away. <br><br>
+	  
+	 Its about taking a walk in the wilderness. 
+	 <br><br>
+	 
+	  You could just do this without reading any further. 
+	 
+	  
+	  The Fieldness dapp* allows you to create 'seeds'. you will know later what seeds are.  
+	  These seeds contain in them location markers that are created by human on walks.
+	  
+	  The idea is that humans all over the world, taking walks, making observations can have a way to add it to the world database that is not server dependent, service dependent. This database is directly connected to the screens and the human-land of here and now. Interfacing through smartphone screen- it shows you the current location and the current time. 
+	  
+	  You can create a new seed, not emmediately, but as you gain some footing into the dapp's meanign and function, you qualify to make your own seeds. This is a real cost- to commit a bit of data to the blockchain. It has a gas price- the price to run that bit of code. 
+	  
+	 And this is also you asset that you are creaing - investing in. Your observation in the real world - a microscopic superorganism, a strange plant or growth in places that can be visited by other people preferably. (you could make it in private property but it wouldn't gain value with no visitors lending their attention and observation to the seed. )
+	  
+ 
+	 s you go to other people's markers in your vicinity, you will see
+	  
+	  
+	  
+	  *dapp <br>
+	  is basically an app but completely differnt right after the screen layer. 
+	  
+	  --svg--
+	  
+	 
+	  Now coming to what these seeds really are. 
+	  had somethng non human anything that is growing with no human aid. Wilderness. Its everywhere.
+	  these are virtual tokens that
+	  
+	  
+	  
+	  
+	 
+	  The dapp is map  based. or walk to the nearest circle that you can see on the map. If where you are, you are not in the majority and there are non human beings- like mushrooms, if you are standing in soil and not on concrete then you could mark this place as an 'incindnt'
 	 
 	  
 	  
