--- a/index.html
+++ b/index.html
@@ -102,19 +102,22 @@
 <div class="feels">
  <div class="def2">
   <font face="Roboto Mono" size="4.5em"> 
-	  Fieldness is an ecological network and a crowd sopurced database hosted on Ethereum. Ethereum is a global, open-source platform for decentralized applications.  Fieldness is a artistic research project and a dapp. (dapp = decentralized application.)
+	  Fieldness is an ecological network and a crowd sopurced database hosted on Ethereum. Ethereum is a global, open-source platform for decentralized applications.  Fieldness is a artistic research project and a decentralized application or 'dapp')
 	  
+		<br><br>
 	  The fieldness dapp    |    web 3.0 and dapp landscape     | 
 	  
-	  The idea of this project is to create a system of value that represents what actually is valuable. 
+	  <br><br>
 	  
+	  The artistic motivation is to create a moist envoirmint for a growing, living fieldness network - that is also an ecological database.  It is a small experiment with the meaning of value both in economic and philosophical space and an attempt to understand how does value emerge? 
+	  In the world as we know it right now, everything that has value is being shifted. some of the most irreplaceable
+	  Attention and value seem to have a close relation in our mediated lives right now. With the reality of looming climate change, the pandemic, it seems imperetive to examine what has value. And i would like to ask people to join in the experiment to cre
 	  
+	  What is very valueable  seemingly has the least value. how to take back the earth? Value that has
+	  of value that has no space in the current system.  actually is valuable. This work attempts to look at what is valueable? How value emerges or is enforced in differnt systems. Right now seems to be an appropriate time for this becuase of mainly two reasons. We are going through a large shift in what in what currency means and what are models of distribution of power. Decentralized systems seem to be addressing some of the data exptractivist practices of all the centralized platforms like amazon, facebook etc. The financial model of web2.0 is attention extraction model. At this point and 
+	  <br>
+	 Its about taking a walk in the wilderness. Its about shifting your attention away. <br><br>
 	  
-	  
-	  
-	   Fieldness is shifting your attention away. Away from the words on a screen. Look away. <br><br>
-	  
-	 Its about taking a walk in the wilderness. 
 	 <br><br>
 	 
 	  You could just do this without reading any further. 
