--- a/index.html
+++ b/index.html
@@ -102,43 +102,42 @@
 <div class="feels">
  <div class="def2">
   <font face="Roboto Mono" size="4.5em"> 
-	  Fieldness is an ecological network and a crowd sopurced database hosted on Ethereum. Ethereum is a global, open-source platform for decentralized applications.  Fieldness is a artistic research project and a decentralized application or 'dapp')
+	   Fieldness is a artistic research project and a decentralized application or 'dapp'. It attempts to be an ecological network and a crowd sourced database hosted on Ethereum. Ethereum is a global, open-source platform for decentralized applications.
 	  
 		<br><br>
 	  The fieldness dapp    |    web 3.0 and dapp landscape     | 
 	  
 	  <br><br>
 	  
-	  The artistic motivation is to create a moist envoirmint for a growing, living fieldness network - that is also an ecological database.  It is a small experiment with the meaning of value both in economic and philosophical space and an attempt to understand how does value emerge? 
-	  In the world as we know it right now, everything that has value is being shifted. some of the most irreplaceable
-	  Attention and value seem to have a close relation in our mediated lives right now. With the reality of looming climate change, the pandemic, it seems imperetive to examine what has value. And i would like to ask people to join in the experiment to cre
-	  
-	  What is very valueable  seemingly has the least value. how to take back the earth? Value that has
-	  of value that has no space in the current system.  actually is valuable. This work attempts to look at what is valueable? How value emerges or is enforced in differnt systems. Right now seems to be an appropriate time for this becuase of mainly two reasons. We are going through a large shift in what in what currency means and what are models of distribution of power. Decentralized systems seem to be addressing some of the data exptractivist practices of all the centralized platforms like amazon, facebook etc. The financial model of web2.0 is attention extraction model. At this point and 
+	  The artistic motivation is to create a moist envoirmint for a growing, living network that is also an ecological database for ourselves and a repositary for a long time to come. It is an attempt to not foret what we are losing everyday with the ongoing mass exteinction events in all of our vicinities.  It is an experiment with the meaning of 'value' both in economic and philosophical space. It attempts to look at how value emerges or is enforced.
+	 
+	  In the world as we know it right now, what is valueable is constantly shifting and is in no way universal. The economic models of what is valueable and exchangeable are in flux. Attention and value seem to have a close relation in our mediated lives right now. 
+	  With looming climate change, the pandemic, it seems imperetive to examine what has value. And i would like to ask people to join in the experiment to create a community and network supporting old knowledge systems that have vanished from our vocabulary, public discourse and education. How to take back the earth?
+	    <!--
 	  <br>
 	 Its about taking a walk in the wilderness. Its about shifting your attention away. <br><br>
 	  
 	 <br><br>
 	 
-	  You could just do this without reading any further. 
+
+	 Right now seems to be an appropriate time for this becuase of mainly two reasons. We are going through a large shift in what in what currency means and what are models of distribution of power. Decentralized systems seem to be addressing some of the data exptractivist practices of all the centralized platforms like amazon, facebook etc. The financial model of web2.0 is attention extraction model. At this point and 
 	 
-	  
-	  The Fieldness dapp* allows you to create 'seeds'. you will know later what seeds are.  
-	  These seeds contain in them location markers that are created by human on walks.
-	  
-	  The idea is that humans all over the world, taking walks, making observations can have a way to add it to the world database that is not server dependent, service dependent. This database is directly connected to the screens and the human-land of here and now. Interfacing through smartphone screen- it shows you the current location and the current time. 
-	  
-	  You can create a new seed, not emmediately, but as you gain some footing into the dapp's meanign and function, you qualify to make your own seeds. This is a real cost- to commit a bit of data to the blockchain. It has a gas price- the price to run that bit of code. 
+THE GAME DEV INTRO
+This is a real cost- to commit a bit of data to the blockchain. It has a gas price- the price to run that bit of code. 
 	  
 	 And this is also you asset that you are creaing - investing in. Your observation in the real world - a microscopic superorganism, a strange plant or growth in places that can be visited by other people preferably. (you could make it in private property but it wouldn't gain value with no visitors lending their attention and observation to the seed. )
 	  
  
-	 s you go to other people's markers in your vicinity, you will see
+	  -->
+	  <br><br><br>
+	  The fieldness dapp<br> 
+	  The Fieldness dapp* allows you to create 'seeds'. 
+	  These seeds contain in them location markers that are created by human on walks. Being a part of this network allows the users to earn cryptocurrency. 
+	  <br>
+	  The idea is that humans all over the world, taking walks, making observations add these unique observations to an open database that is not server or service dependent and can be trusted to run forever. *(forever is as long as the ethereum blockchain runs)
 	  
+	  You can create a new seed after you have some game-coins. You can earn game-coins by gathering them around other seeds lying around in your vicinity. These seeds are created by other users of the dapp. These fixed location markers gain or lose value with time as more or less visitors visit them. One could self sustain a seed if the creator visits it.  As you understand the dapp's meanign and function, you qualify to make your own seeds. 
 	  
-	  
-	  *dapp <br>
-	  is basically an app but completely differnt right after the screen layer. 
 	  
 	  --svg--
 	  
@@ -147,7 +146,7 @@
 	  had somethng non human anything that is growing with no human aid. Wilderness. Its everywhere.
 	
 	  
-	  
+	  <!--
 	  
 	 
 	 
@@ -155,15 +154,18 @@
 	  
 	  
 	
-          <a href="" title=" By downloading an app, anyone can become part of the Incident Network. Being a part of this network allows the users to earn  cryptocurrency by visiting incidents all across the city. Users can also register/frame their own incidents.
+          <a href="" title=" By downloading the dapp, anyone can become part of the Fieldness Network. 
           An 'Incident' in this context is any physical space with the proliferation of non-human activity or just simply presence of a predominantly non-human being.
-          This means that even a tree can be an incident. And one can earn money by sitting under a tree for a certain time.
-          Mediated through the phone to access virtual and physical infrastructures of the city, this project attempts to create a parallel economy that is not based on consumption but on spending time in nature and observing. In this attention economy, we can barter a quantum of attention for a value and reinvent the meaning of ‘value’ in the process.  " > what is it exactly? 
+          This means that a tree can be an incident. And one can earn money by sitting under a tree for a certain time.
+          Mediated through the smartphone to access virtual and physical infrastructures of the city, this project attempts to create a parallel economy that is not based on consumption but on spending time in nature and observing. In this attention economy, we can barter a quantum of attention for a value and reinvent the meaning of ‘value’ in the process.  " > what is it exactly? 
           </a> (hover, don't click ;-)
   </font>
  </div>
 </div>
 
+-->
+
+<!--
 <div class="space">
   <div></div>
 </div>
@@ -175,9 +177,6 @@
   <img class="img-fluid" src="4ORANG.gif">
   <img class="img-fluid" src="5SCROLL.gif">
 </div>
-
-
-
 
 
 
@@ -240,6 +239,7 @@
     </font>
   </div>
 </div>
+-->
 
 <div>
   <img class="img-fluid" src="A5cut.png">
