--- a/index.html
+++ b/index.html
@@ -226,14 +226,15 @@ This is a real cost- to commit a bit of data to the blockchain. It has a gas pri
       In the following links, we critically at some of the things around us.  <br><br>
         </font>
         <font face="Roboto Mono" size="4em">
-    ---> <a href="walks2.html"> Forest walks </a> <br><br>
-    ---> <a href="thepandemic.html"> <i> An account from 2050 </i> </a><br><br>
-    ---> <a href="tiem3.html"> TIEM </a><br><br>
+    <a href="walks2.html"> Forest walks </a> <br><br>
+   <a href="thepandemic.html"> <i> An account from 2050 </i> </a><br><br>
+     <a href="tiem3.html"> TIEM </a><br><br>
     <!--  <a href="portal.html">portal and the portal</a> <br><br> -->
-    ---> <a href="process.html"> Process </a> <br><br>
-    ---> <a href="NOTE.html"> Nothing will be forgotten </a> <font size="3em"> (an account of the time this project was made in)</font><br><br>
-     <!-- what are numbers even + a game <br><br> -->
-    ---> <a href="source.html"> Re/source Re/ference </a>
+	  <!--
+     <a href="process.html"> Process </a> <br><br>
+     <a href="NOTE.html"> Nothing will be forgotten </a> <font size="3em"> (an account of the time this project was made in)</font><br><br>
+     <!-- what are numbers even + a game <br><br> 
+     <a href="source.html"> Re/source Re/ference </a>
     <img class="img-fluid" src="tree.png">
 
     </font>
