--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ This is a real cost- to commit a bit of data to the blockchain. It has a gas pri
 
 
  <div>
-      <img class="img-fluid" src="bgmainfinal.png">
+      <img class="img-fluid" src="platfin.png">
 
       <br><br><br>
  </div>  
