--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!--IF someone is actually here reading this by going into the github code for this webiste, welcome to 'behind the scenes'! I will try to keep you entertained ;--) written on 7th April 2020. A very unremarkable day where I did not really do anything. One of the quarentine days where I did not do much at all. But this is irrelevant to you - the reader. it is interesting and strange to be talking to someone I cannot imagine, across a distance of space and time! Here is a secret- I think I am non-binary, but its not somethign I can really take on right now, and so I will continue to present as a woman. I am not a man though. For sure.  And oh! these days I have a very interesting secret crush. This is enough confession for one comment. see you later. maybe, maybe not. -->
 
-<body style="background-color:#ad7eadb6">
+<body style="background-color:hsla(300, 22%, 59%, 0.714)">
 	<font face="Roboto" color="white" size="7">
 </body>
 <body>
