--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </head>
 
-<!--IF someone is actually here reading this by going into the github code for this webiste, welcome to 'behind the scenes'! I will try to keep you entertained ;--) written on 7th April 2020. A very unremarkable day where I did not really do anything. One of the quarentine days where I did not do much at all. But this is irrelevant to you - the reader. it is interesting and strange to be talking to someone I cannot imagine, across a distance of space and time! Here is a secret- I think I am non-binary, but its not somethign I can really take on right now, and so I will continue to present as a woman. I am not a man though. For sure. I like to fuck women though. And oh! these days I have a very interesting secret crush. This is enough confession for one comment. see you later. maybe, maybe not. -->
+<!--IF someone is actually here reading this by going into the github code for this webiste, welcome to 'behind the scenes'! I will try to keep you entertained ;--) written on 7th April 2020. A very unremarkable day where I did not really do anything. One of the quarentine days where I did not do much at all. But this is irrelevant to you - the reader. it is interesting and strange to be talking to someone I cannot imagine, across a distance of space and time! Here is a secret- I think I am non-binary, but its not somethign I can really take on right now, and so I will continue to present as a woman. I am not a man though. For sure. And oh! these days I have a very interesting secret crush. This is enough confession for one comment. see you later. maybe, maybe not. -->
 
 <body style="background-color:#ad7fadb6">
 	<font face="Roboto" color="white" size="7">
@@ -146,9 +146,9 @@
       The financial markets upheld by extractive neolibral models create financial ecosystems where 'value' is abstacted, where <i> <font color="yellow"> pure speculation, movement for movement's sake, with no apparant purpose other than to defy the law of value</font> is the norm.
       </i> 
       
-      Since cryptoeconomics is still an emerging force in global finance, there is possibility of subverting the market by using the tools of an extractive system on itself. Fieldness is an experiment in this spcae between art, ecology, blockchain, cryptoeconomies, decentralizd finanace markets and people.
+      Since cryptoeconomics is still an emerging force in global finance, there is possibility of subverting the market by using the tools of an extractive system on itself. Fieldness is an experiment in this space between art, ecology, blockchain, cryptoeconomies, decentralizd finanace markets and people.
       <br> <br>
-      At the surface, Fieldness is an platform. Underneath the surface, it is an archive of species that might never be seen again, an attempt to convert experiences with non-human beings into crypto-assets of inevitably increasing rarity as we tunnel through the 6th mass extinction and widespread climate change. It a lifetime personal archive for each user of 'seeds' visited. It is about creating a model of 'what is valueable' from an organizing logic differnt from our current system.
+      At the surface, Fieldness is an platform. Underneath the surface, it is an archive of species that might never be seen again, an attempt to convert experiences with non-human beings into crypto-assets of inevitably increasing rarity. As we tunnel through the 6th mass extinction and widespread climate change, it a lifetime personal archive for each user of 'seeds*' visited and a map of observations. It is about creating a model of 'what is valueable' from an organizing logic differnt from our current system.
       <br>
 
       <a href="intrographic.html" target="blank"> 5 min intro to Fieldness >> </a>
