--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       
       Since cryptoeconomics is still an emerging force in global finance, there is possibility of subverting the market by using the tools of an extractive system on itself. Fieldness is an experiment in this space between art, ecology, blockchain, cryptoeconomies, decentralizd finanace markets and people.
       <br> <br>
-      At the surface, Fieldness is an platform. Underneath the surface, it is an archive of species that might never be seen again, an attempt to convert experiences with non-human beings into crypto-assets of inevitably increasing rarity. As we tunnel through the 6th mass extinction and widespread climate change, it a lifetime personal archive for each user of 'seeds*' visited and a map of observations. It is about creating a model of 'what is valueable' from an organizing logic differnt from our current system.
+      At the surface, Fieldness is a platform. Underneath the surface, it is an archive of species that might never be seen again, an attempt to convert experiences with non-human beings into crypto-assets of inevitably increasing rarity. As we tunnel through the 6th mass extinction and widespread climate change, it a lifetime personal archive for each user of 'seeds*' visited and a map of observations. It is about creating a model of 'what is valueable' from an organizing logic differnt from our current system.
       <br>
 
       <a href="intrographic.html" target="blank"> 5 min intro to Fieldness >> </a>
