--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
       <br> <br>
       At the surface, Fieldness is a platform. Underneath the surface, it is an archive of species that might never be seen again, an attempt to convert experiences with non-human beings into crypto-assets of inevitably increasing rarity. As we tunnel through the 6th mass extinction and widespread climate change, it a lifetime personal archive for each user of 'seeds*' visited and a map of observations. It is about creating a model of 'what is valueable' from an organizing logic differnt from our current system.
       <br>
-
+	<font size="6 em">
       <a href="intrographic.html" target="blank"> 5 min intro to Fieldness >> </a>
-
+	</font>
     </font>
 
   </div>
